[package]
name = "ukemcore"
version = "0.1.0"
authors = ["Homarechan <tikuwakunn@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.11.1"}

[lib]
name = "ukemcore"
crate-type = ["cdylib"]